updated swagger docs and added explicit types to unparsable fields.
