# docs/swagger.yaml
@@ -1,5 +1,75 @@
 basePath: /
 definitions:
+  medium.medium:
+    properties:
+      alt_text:
+        type: string
+      caption:
+        type: string
+      description:
+        type: string
+      dimensions:
+        type: string
+      file_size:
+        type: integer
+      name:
+        type: string
+      slug:
+        type: string
+      title:
+        type: string
+      type:
+        type: string
+      url:
+        type: string
+    required:
+    - dimensions
+    - file_size
+    - name
+    - type
+    type: object
+  medium.paging:
+    properties:
+      nodes:
+        items:
+          $ref: '#/definitions/model.Medium'
+        type: array
+      total:
+        type: integer
+    type: object
+  model.Medium:
+    properties:
+      alt_text:
+        type: string
+      caption:
+        type: string
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      description:
+        type: string
+      dimensions:
+        type: string
+      file_size:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      slug:
+        type: string
+      title:
+        type: string
+      type:
+        type: string
+      updated_at:
+        type: string
+      url:
+        type: string
+      user_id:
+        type: integer
+    type: object
   model.Organisation:
     properties:
       created_at:
@@ -8,8 +78,12 @@ definitions:
         type: string
       description:
         type: string
+      featured_medium_id:
+        type: integer
       id:
         type: integer
+      medium:
+        $ref: '#/definitions/model.Medium'
       slug:
         type: string
       title:
@@ -48,6 +122,8 @@ definitions:
         type: string
       email:
         type: string
+      featured_medium_id:
+        type: integer
       first_name:
         type: string
       gender:
@@ -58,6 +134,8 @@ definitions:
         type: string
       last_name:
         type: string
+      medium:
+        $ref: '#/definitions/model.Medium'
       updated_at:
         type: string
     type: object
@@ -69,8 +147,12 @@ definitions:
         type: string
       description:
         type: string
+      featured_medium_id:
+        type: integer
       id:
         type: integer
+      medium:
+        $ref: '#/definitions/model.Medium'
       permission:
         $ref: '#/definitions/model.OrganisationUser'
       slug:
@@ -84,6 +166,8 @@ definitions:
     properties:
       description:
         type: string
+      featured_medium_id:
+        type: integer
       slug:
         type: string
       title:
@@ -95,6 +179,8 @@ definitions:
     properties:
       birth_date:
         type: string
+      featured_medium_id:
+        type: integer
       first_name:
         type: string
       gender:
@@ -122,6 +208,8 @@ definitions:
         type: string
       email:
         type: string
+      featured_medium_id:
+        type: integer
       first_name:
         type: string
       gender:
@@ -132,6 +220,8 @@ definitions:
         type: string
       last_name:
         type: string
+      medium:
+        $ref: '#/definitions/model.Medium'
       permission:
         $ref: '#/definitions/model.OrganisationUser'
       updated_at:
@@ -150,7 +240,170 @@ info:
   title: Kavach Server API
   version: "1.0"
 paths:
+  /media:
+    get:
+      description: Get all media
+      operationId: get-all-media
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Sort
+        in: query
+        name: sort
+        type: string
+      - description: limit per page
+        in: query
+        name: limit
+        type: string
+      - description: page number
+        in: query
+        name: page
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/medium.paging'
+            type: array
+      summary: Show all media
+      tags:
+      - Medium
+    post:
+      description: Create medium
+      operationId: add-medium
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Medium Object
+        in: body
+        name: Medium
+        required: true
+        schema:
+          $ref: '#/definitions/medium.medium'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Medium'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Create medium
+      tags:
+      - Medium
+  /media/{medium_id}:
+    delete:
+      description: Delete medium by ID
+      operationId: delete-medium-by-id
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Medium ID
+        in: path
+        name: medium_id
+        required: true
+        type: string
+      responses:
+        "200": {}
+      summary: Delete a medium
+      tags:
+      - Medium
+    get:
+      description: Get medium by ID
+      operationId: get-medium-by-id
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Medium ID
+        in: path
+        name: medium_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Medium'
+      summary: Show a medium by id
+      tags:
+      - Medium
+    put:
+      description: Update medium by ID
+      operationId: update-medium-by-id
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Medium ID
+        in: path
+        name: medium_id
+        required: true
+        type: string
+      - description: Medium
+        in: body
+        name: Medium
+        schema:
+          $ref: '#/definitions/medium.medium'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Medium'
+      summary: Update a medium by id
+      tags:
+      - Medium
   /organisations:
+    get:
+      description: Get all organisations
+      operationId: get-all-organisations
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Query
+        in: query
+        name: q
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Organisation'
+            type: array
+      summary: Show all organisations
+      tags:
+      - Organisation
     post:
       description: Create organisation
       operationId: add-organisation
@@ -348,7 +601,7 @@ paths:
   /organisations/my:
     get:
       description: Get all organisations
-      operationId: get-all-organisations
+      operationId: get-all-my-organisations
       parameters:
       - description: User ID
         in: header
