# model/base.go
@@ -11,8 +11,8 @@ type Base struct {
 	ID        uint            `gorm:"primaryKey" json:"id"`
 	CreatedAt time.Time       `json:"created_at"`
 	UpdatedAt time.Time       `json:"updated_at"`
-	DeletedAt *gorm.DeletedAt `gorm:"index" json:"deleted_at"`
+	DeletedAt *gorm.DeletedAt `gorm:"index" json:"deleted_at" swaggertype:"primitive,string"`
 }
 
-// ContextKey
+// ContextKey string type
 type ContextKey string
